# SupplyTracker

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  render.yaml
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260528_0001_initial.py  20260528_0002_ports_locode_unique.py  20260529_0003_add_news_item.py  20260529_0004_entity_catalog_tracking.py  20260531_0005_entity_summary_cache.py
backend/app/: config.py  main.py
backend/app/analysis/: baselines.py  entity_pipeline.py  events.py  forecasting.py  macro_correlation.py  risk_components.yaml  scoring.py
backend/app/api/: deps.py  rate_limit.py  router.py
backend/app/collectors/: base.py  bunker_scraper.py  catalog.py  fbx_scraper.py  fred.py  google_news.py  portwatch.py  wci_scraper.py
backend/app/db/: models.py  session.py
backend/app/fixtures/: chokepoints_seed.json  ports_seed.json
backend/app/llm/: brief.py  chat.py  client.py  grounding.py  prompts.py  safety.py
backend/app/schemas/: __init__.py  brief.py  chat.py  chokepoints.py  common.py  dashboard.py  health.py  indices.py  insights.py  news.py  ports.py  risk.py  stats.py  story.py  sync.py
backend/app/scripts/: backfill_risk.py  ingest_catalog.py  seed_dev.py
backend/app/services/: dashboard.py  disruption.py  insights.py  market.py
backend/app/tasks/: celery_app.py  collect.py  forecast.py  narrate.py  schedule.py  score.py
backend/data/seed/: README.md  fbx.csv  wci.csv
backend/tests/: conftest.py  test_config.py
backend/tests/analysis/: test_baselines.py  test_disruption.py  test_events.py  test_macro_correlation.py  test_scoring.py
backend/tests/api/: conftest.py  test_brief.py  (+12 more)
(+166 files in other folders)
