[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supplytracker-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.2",
    "geoalchemy2>=0.15",
    "shapely>=2.0",
    "celery[redis]>=5.4",
    "flower>=2.0",
    "redis>=5.1",
    "httpx>=0.27",
    "feedparser>=6.0",
    "pandas>=2.2",
    "statsforecast>=1.7",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "openai>=1.50",
    "dashscope>=1.20",
    "sse-starlette>=2.1",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.7",
    "mypy>=1.13",
    "types-PyYAML>=6.0",
]

[project.scripts]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.ruff.format]
# Black-compatible formatting
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["dashscope.*", "statsforecast.*", "geoalchemy2.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "app.tasks.*"
disable_error_code = ["untyped-decorator", "no-untyped-call", "no-untyped-def", "no-any-return"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["tests"]
